[gd_scene load_steps=2 format=3 uid="uid://cbykprebt3jaa"]

[ext_resource type="Script" uid="uid://ca7erogu58fca" path="res://addons/gecs/debug/gecs_editor_debugger_tab.gd" id="1_8dl00"]

[node name="GECSEditorDebuggerTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8dl00")

[node name="HSplit" type="HSplitContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntitiesVBox" type="VBoxContainer" parent="HSplit/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplit/HSplitContainer/EntitiesVBox"]
layout_mode = 2

[node name="EntitiesQueryLineEdit" type="LineEdit" parent="HSplit/HSplitContainer/EntitiesVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Entities filter....."

[node name="CollapseAllBtn" type="Button" parent="HSplit/HSplitContainer/EntitiesVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Collapse All"

[node name="ExpandAllBtn" type="Button" parent="HSplit/HSplitContainer/EntitiesVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Expand All"

[node name="QueryBuilderCheckBox" type="CheckBox" parent="HSplit/HSplitContainer/EntitiesVBox/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "QueryBuilder"

[node name="EntitiesTree" type="Tree" parent="HSplit/HSplitContainer/EntitiesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true

[node name="SystemsVBox" type="VBoxContainer" parent="HSplit/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplit/HSplitContainer/SystemsVBox"]
layout_mode = 2

[node name="SystemsQueryLineEdit" type="LineEdit" parent="HSplit/HSplitContainer/SystemsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Systems filter...."

[node name="SystemsCollapseAllBtn" type="Button" parent="HSplit/HSplitContainer/SystemsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Collapse All"

[node name="SystemsExpandAllBtn" type="Button" parent="HSplit/HSplitContainer/SystemsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Expand All"

[node name="ToggleSystemActiveBtn" type="Button" parent="HSplit/HSplitContainer/SystemsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle the selected system's active state"
text = "Toggle Active"

[node name="PopOutBtn" type="Button" parent="HSplit/HSplitContainer/SystemsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pop Out"

[node name="SystemsTree" type="Tree" parent="HSplit/HSplitContainer/SystemsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_root = true
select_mode = 2
